beta release version of extension

--- a/package.json
+++ b/package.json
@@ -1,16 +1,48 @@
 {
   "title": "Speculative Fictions",
   "name": "speculative-fictions",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Balances absurdity and imaginary worlds to make readers take a step back from the crazy oil-driven world we live in...and laugh.",
   "main": "index.js",
-  "author": "Nick Lyell",
+  "author": "Nick Lyell, Simone Doing, Max Puchalsky",
   "engines": {
     "firefox": ">=38.0a1",
     "fennec": ">=38.0a1"
   },
   "license": "MIT",
   "keywords": [
-    "jetpack"
+    "environment",
+    "climate change",
+    "oil",
+    "coal",
+    "natural gas",
+    "fossil fuels",
+    "greenhouse gas",
+    "petroleum",
+    "drilling",
+    "natural",
+    "tar sands",
+    "forest fire",
+    "drought",
+    "flood",
+    "pipeline",
+    "emissions",
+    "Big Oil",
+    "Carbon Paganistic",
+    "The Smog Syndicate",
+    "terradeform",
+    "subsea",
+    "enchanted",
+    "magic",
+    "subterranean",
+    "oil spill",
+    "valdezian gush",
+    "moon-scaping operation",
+    "drydeath",
+    "wetdeath",
+    "primordial slime",
+    "smog rock",
+    "melange",
+    "effluvium"
   ]
 }
